force-app/main/default/objects/Contact/fields/Capacity_Max__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Max__c</fullName>
    <description>Per-practitioner assignment cap (admin-set). AssignmentSelector filters candidates by Current_Load__c &lt; Capacity_Max__c.</description>
    <label>Capacity Max</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>