force-app/main/default/objects/Contact/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Geolocation for distance-based practitioner selection (INT-009 AssignmentSelector).</description>
    <label>Location</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>