force-app/main/default/objects/Contact/fields/On_Leave__c.field-meta.xml
<CustomField>
    <fullName>On_Leave__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Practitioner on leave — excludes them from AssignmentSelector candidacy.</description>
    <label>On Leave</label>
    <type>Checkbox</type>
</CustomField>