force-app/main/default/objects/Contact/fields/Onboarding_Complete__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Complete__c</fullName>
    <label>Onboarding Complete</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>INT-006 — gate: subsidy-application journey (INT-008) is blocked until this is true.</description>
</CustomField>