force-app/main/default/objects/Contact/fields/Origin_Office__c.field-meta.xml
<CustomField>
    <fullName>Origin_Office__c</fullName>
    <label>Origin Office</label>
    <type>Text</type>
    <length>80</length>
    <description>INT-017 — source-office attribution carried through from TAMS migration.</description>
</CustomField>