force-app/main/default/objects/Contact/fields/Practitioner_Vetting_Status__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Vetting_Status__c</fullName>
    <label>Practitioner Vetting Status</label>
    <type>Picklist</type>
    <description>INT-003 — vetting queue state for practitioner self-registration. Community license is only provisioned when this becomes Approved.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>