force-app/main/default/objects/Contact/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Regional branch. Thin scaffold for INT-009 filtering; INT-005 will own the full role-hierarchy mapping.</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>APAC</fullName><default>false</default><label>APAC</label></value>
            <value><fullName>EMEA</fullName><default>false</default><label>EMEA</label></value>
            <value><fullName>AMER</fullName><default>false</default><label>AMER</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>