force-app/main/default/objects/Contact/recordTypes/Patient.recordType-meta.xml
<RecordType>
    <fullName>Patient</fullName>
    <active>true</active>
    <label>Patient</label>
    <description>INT-003 — Patient portal contact. Kept distinct from Practitioner to prevent record merges (guardrail 1).</description>
</RecordType>