force-app/main/default/objects/Contact/recordTypes/Practitioner.recordType-meta.xml
<RecordType>
    <fullName>Practitioner</fullName>
    <active>true</active>
    <label>Practitioner</label>
    <description>INT-003 — Practitioner community contact. Admin-vetting queue gates community access.</description>
</RecordType>